add more translation fix loi dang ky

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -1,6 +1,9 @@
 {
   "login": {
     "title": "Sign In",
+    "subtitle": "Welcome back to Myosotis",
+    "needSupport": "Need support?",
+    "contactUs": "Contact us",
     "backToHome": "Back to Home",
     "emailLabel": "Email",
     "emailPlaceholder": "Enter your email",
@@ -18,6 +21,12 @@
   "register": {
     "title": "Create Your Account",
     "subtitle": "Get started with just a few details",
+    "pageTitle": "Create New Account",
+    "pageSubtitle": "Join us to support people with Alzheimer's",
+    "termsText": "By signing up, you agree to our",
+    "termsOfService": "Terms of Service",
+    "and": "and",
+    "privacyPolicy": "Privacy Policy",
     "backToHome": "Back to Home",
     "emailLabel": "Email",
     "emailPlaceholder": "Enter your email",
