--- a/src/locales/vi/auth.json
+++ b/src/locales/vi/auth.json
@@ -1,6 +1,9 @@
 {
   "login": {
     "title": "Đăng nhập",
+    "subtitle": "Chào mừng bạn trở lại với Myosotis",
+    "needSupport": "Cần hỗ trợ?",
+    "contactUs": "Liên hệ với chúng tôi",
     "backToHome": "Quay về trang chủ",
     "emailLabel": "Email",
     "emailPlaceholder": "Nhập email của bạn",
@@ -18,6 +21,12 @@
   "register": {
     "title": "Tạo tài khoản của bạn",
     "subtitle": "Bắt đầu chỉ với vài thông tin đơn giản",
+    "pageTitle": "Tạo tài khoản mới",
+    "pageSubtitle": "Tham gia cùng chúng tôi để hỗ trợ người mắc bệnh Alzheimer",
+    "termsText": "Bằng việc đăng ký, bạn đồng ý với",
+    "termsOfService": "Điều khoản dịch vụ",
+    "and": "và",
+    "privacyPolicy": "Chính sách bảo mật",
     "backToHome": "Quay về trang chủ",
     "emailLabel": "Email",
     "emailPlaceholder": "Nhập email của bạn",
