--- a/src/locales/vi/auth.json
+++ b/src/locales/vi/auth.json
@@ -1,16 +1,16 @@
 {
   "login": {
-    "title": "Đăng nhập",
-    "subtitle": "Chào mừng bạn trở lại với Myosotis",
-    "needSupport": "Cần hỗ trợ?",
-    "contactUs": "Liên hệ với chúng tôi",
-    "backToHome": "Quay về trang chủ",
+    "title": "Đăng Nhập",
+    "subtitle": "Chào mừng trở lại Myosotis",
+    "needSupport": "Bạn cần hỗ trợ?",
+    "contactUs": "Liên hệ chúng tôi",
+    "backToHome": "Về Trang Chủ",
     "emailLabel": "Email",
     "emailPlaceholder": "Nhập email của bạn",
     "emailHelp": "Email bạn đã dùng để đăng ký",
-    "passwordLabel": "Mật khẩu",
+    "passwordLabel": "Mật Khẩu",
     "passwordPlaceholder": "Nhập mật khẩu của bạn",
-    "submitButton": "Đăng nhập",
+    "submitButton": "Đăng Nhập",
     "submittingButton": "Đang đăng nhập...",
     "forgotPassword": "Quên mật khẩu?",
     "noAccount": "Chưa có tài khoản?",
@@ -19,23 +19,23 @@
     "required": "*"
   },
   "register": {
-    "title": "Tạo tài khoản của bạn",
+    "title": "Tạo Tài Khoản Của Bạn",
     "subtitle": "Bắt đầu chỉ với vài thông tin đơn giản",
-    "pageTitle": "Tạo tài khoản mới",
-    "pageSubtitle": "Tham gia cùng chúng tôi để hỗ trợ người mắc bệnh Alzheimer",
+    "pageTitle": "Tạo Tài Khoản Mới",
+    "pageSubtitle": "Tham gia cùng chúng tôi để hỗ trợ người bệnh Alzheimer",
     "termsText": "Bằng việc đăng ký, bạn đồng ý với",
-    "termsOfService": "Điều khoản dịch vụ",
+    "termsOfService": "Điều khoản Dịch vụ",
     "and": "và",
-    "privacyPolicy": "Chính sách bảo mật",
-    "backToHome": "Quay về trang chủ",
+    "privacyPolicy": "Chính sách Bảo mật",
+    "backToHome": "Về Trang Chủ",
     "emailLabel": "Email",
     "emailPlaceholder": "Nhập email của bạn",
     "emailHelp": "Email sẽ được dùng để đăng nhập",
-    "fullNameLabel": "Họ và tên",
+    "fullNameLabel": "Họ và Tên",
     "fullNamePlaceholder": "Nhập họ và tên của bạn",
-    "passwordLabel": "Mật khẩu",
+    "passwordLabel": "Mật Khẩu",
     "passwordPlaceholder": "Nhập mật khẩu (ít nhất 8 ký tự)",
-    "submitButton": "Tạo tài khoản",
+    "submitButton": "Tạo Tài Khoản",
     "submittingButton": "Đang tạo tài khoản...",
     "haveAccount": "Đã có tài khoản?",
     "signInNow": "Đăng nhập ngay",
@@ -44,11 +44,11 @@
     "required": "*"
   },
   "validation": {
-    "emailRequired": "Vui lòng nhập email",
+    "emailRequired": "Email là bắt buộc",
     "emailInvalid": "Vui lòng nhập một địa chỉ email hợp lệ",
-    "passwordRequired": "Vui lòng nhập mật khẩu",
+    "passwordRequired": "Mật khẩu là bắt buộc",
     "passwordMinLength": "Mật khẩu phải có ít nhất 8 ký tự",
-    "fullNameRequired": "Vui lòng nhập họ và tên",
+    "fullNameRequired": "Họ và tên là bắt buộc",
     "fullNameMinLength": "Họ và tên phải có ít nhất 2 ký tự"
   }
 }
