--- a/src/locales/vi/dashboard.json
+++ b/src/locales/vi/dashboard.json
@@ -1,17 +1,17 @@
 {
   "navigation": {
-    "dashboard": "Bảng điều khiển",
-    "myAccount": "Tài khoản của tôi",
-    "discover": "Khám phá"
+    "dashboard": "Bảng Điều Khiển",
+    "myAccount": "Tài Khoản Của Tôi",
+    "discover": "Khám Phá"
   },
   "buttons": {
-    "createNewSchedule": "Tạo lịch trình mới",
+    "createNewSchedule": "Tạo Lịch Trình Mới",
     "signOut": "Đăng xuất",
-    "edit": "Chỉnh sửa",
+    "edit": "Chỉnh Sửa",
     "save": "Lưu",
     "cancel": "Hủy",
-    "previousMonth": "Tháng trước",
-    "nextMonth": "Tháng sau"
+    "previousMonth": "Tháng Trước",
+    "nextMonth": "Tháng Sau"
   },
   "notifications": {
     "scheduleComingSoon": "Tính năng Lịch trình sắp ra mắt!"
@@ -20,8 +20,8 @@
     "myosotis": "Myosotis"
   },
   "homePage": {
-    "title": "Bảng điều khiển",
-    "description": "Chào mừng bạn đến với bảng điều khiển chăm sóc sức khỏe và trí nhớ",
+    "title": "Bảng Điều Khiển",
+    "description": "Chào mừng đến với bảng điều khiển sức khỏe và chăm sóc trí nhớ của bạn",
     "features": {
       "livingMemories": {
         "title": "Ký Ức Sống Động",
@@ -37,31 +37,31 @@
       },
       "memoryFilms": {
         "title": "Thước Phim Ký Ức",
-        "subtitle": "Xem lại những kỷ niệm trân quý"
+        "subtitle": "Xem những kỷ niệm yêu dấu của bạn"
       },
       "memoryMap": {
         "title": "Bản Đồ Ký Ức",
-        "subtitle": "Khám phá địa điểm và tạo ký ức"
+        "subtitle": "Khám phá địa điểm và tạo ký ức theo vị trí"
       },
       "miniGames": {
-        "title": "Trò Chơi Trí Tuệ",
+        "title": "Trò Chơi Nhỏ",
         "subtitle": "Rèn luyện trí não với trò chơi Sudoku"
       }
     },
     "calendar": {
       "months": {
-        "january": "Tháng 1",
-        "february": "Tháng 2", 
-        "march": "Tháng 3",
-        "april": "Tháng 4",
-        "may": "Tháng 5",
-        "june": "Tháng 6",
-        "july": "Tháng 7",
-        "august": "Tháng 8",
-        "september": "Tháng 9",
-        "october": "Tháng 10",
-        "november": "Tháng 11",
-        "december": "Tháng 12"
+        "january": "Tháng Một",
+        "february": "Tháng Hai",
+        "march": "Tháng Ba",
+        "april": "Tháng Tư",
+        "may": "Tháng Năm",
+        "june": "Tháng Sáu",
+        "july": "Tháng Bảy",
+        "august": "Tháng Tám",
+        "september": "Tháng Chín",
+        "october": "Tháng Mười",
+        "november": "Tháng Mười Một",
+        "december": "Tháng Mười Hai"
       },
       "daysOfWeekShort": {
         "monday": "T2",
@@ -79,12 +79,12 @@
     }
   },
   "discoverPage": {
-    "title": "Khám phá",
+    "title": "Khám Phá",
     "description": "Khám phá tất cả các tính năng và công cụ có sẵn",
     "features": {
       "livingMemories": {
         "title": "Ký Ức Sống Động",
-        "description": "Tạo avatar AI với giọng nói của người thân yêu"
+        "description": "Tạo avatar AI với giọng nói của người thân"
       },
       "memoryTest": {
         "title": "Kiểm Tra Trí Nhớ (MMSE)",
@@ -100,52 +100,52 @@
       },
       "careCompanion": {
         "title": "Bạn Đồng Hành Chăm Sóc",
-        "description": "Trò chuyện với bạn đồng hành AI của bạn"
+        "description": "Trò chuyện với bạn đồng hành AI"
       },
       "emergencyContacts": {
-        "title": "Danh Bạ Khẩn Cấp",
-        "description": "Quản lý danh bạ khẩn cấp và người chăm sóc"
+        "title": "Liên Hệ Khẩn Cấp",
+        "description": "Quản lý các liên hệ khẩn cấp và người chăm sóc"
       },
       "memoryMap": {
         "title": "Bản Đồ Ký Ức",
-        "description": "Khám phá các địa điểm và tạo ký ức theo vị trí với Chế độ xem phố"
+        "description": "Khám phá địa điểm và tạo ký ức theo vị trí với Chế độ xem phố"
       },
       "miniGames": {
-        "title": "Trò Chơi Trí Tuệ",
+        "title": "Trò Chơi Nhỏ",
         "description": "Rèn luyện trí não với Sudoku và các câu đố trí tuệ khác"
       }
     }
   },
   "accountPage": {
-    "title": "Tài khoản của tôi",
+    "title": "Tài Khoản Của Tôi",
     "description": "Quản lý thông tin cá nhân và cài đặt tài khoản của bạn",
     "loading": "Đang tải thông tin cá nhân...",
     "fields": {
-      "fullName": "Họ và tên",
-      "email": "Địa chỉ email",
-      "phone": "Số điện thoại",
-      "dateOfBirth": "Ngày sinh",
-      "gender": "Giới tính",
-      "address": "Địa chỉ",
-      "city": "Thành phố hiện tại",
-      "hometown": "Quê quán",
-      "country": "Quốc gia",
-      "medicalNotes": "Ghi chú y tế",
+      "fullName": "Họ và Tên",
+      "email": "Địa chỉ Email",
+      "phone": "Số Điện Thoại",
+      "dateOfBirth": "Ngày Sinh",
+      "gender": "Giới Tính",
+      "address": "Địa Chỉ",
+      "city": "Thành Phố Hiện Tại",
+      "hometown": "Quê Quán",
+      "country": "Quốc Gia",
+      "medicalNotes": "Ghi Chú Y Tế",
       "notProvided": "Chưa cung cấp",
       "selectGender": "Chọn giới tính",
       "male": "Nam",
       "female": "Nữ"
     },
     "buttons": {
-      "edit": "Chỉnh sửa thông tin",
-      "save": "Lưu thay đổi",
+      "edit": "Chỉnh Sửa Thông Tin",
+      "save": "Lưu Thay Đổi",
       "cancel": "Hủy",
       "saving": "Đang lưu..."
     },
     "errors": {
       "userIdNotFound": "Không tìm thấy ID người dùng",
       "fetchFailed": "Không thể tải thông tin người dùng",
-      "saveFailed": "Lưu thông tin cá nhân thất bại"
+      "saveFailed": "Không thể lưu thông tin cá nhân"
     },
     "messages": {
       "updateSuccess": "Cập nhật thông tin cá nhân thành công!"
@@ -153,22 +153,22 @@
   },
   "emergencyContacts": {
     "title": "Liên Hệ Khẩn Cấp",
-    "description": "Quản lý liên hệ khẩn cấp và người chăm sóc của bạn",
+    "description": "Quản lý các liên hệ khẩn cấp và người chăm sóc của bạn",
     "addContact": "Thêm Liên Hệ",
     "noContacts": {
-      "title": "Chưa Có Liên Hệ Khẩn Cấp",
-      "subtitle": "Thêm các liên hệ khẩn cấp để có thể liên lạc dễ dàng khi cần thiết",
+      "title": "Không Có Liên Hệ Khẩn Cấp",
+      "subtitle": "Thêm các liên hệ khẩn cấp để giữ những người quan trọng trong tầm tay",
       "addButton": "Thêm Liên Hệ"
     },
     "actions": {
       "call": "Gọi",
-      "email": "Email",
+      "email": "Gửi Email",
       "edit": "Sửa",
       "delete": "Xóa"
     },
     "errors": {
-      "fetchFailed": "Không thể tải danh sách liên hệ khẩn cấp"
+      "fetchFailed": "Không thể tải danh bạ khẩn cấp"
     },
-    "loading": "Đang tải danh sách liên hệ..."
+    "loading": "Đang tải danh bạ..."
   }
 }
