--- a/src/locales/vi/landing.json
+++ b/src/locales/vi/landing.json
@@ -25,7 +25,7 @@
     "subtitle": "Trải nghiệm các tính năng cốt lõi được thiết kế để tạo ra sự khác biệt thực sự trong việc chăm sóc bệnh Alzheimer. Mỗi tính năng đều được xây dựng cẩn thận dựa trên nhu cầu thực tế của các gia đình và kiến thức chuyên môn lâm sàng.",
     "aiMemories": {
       "label": "Ký Ức Sống Động AI",
-      "title": "Mang Người Thân Yêu Trở Lại Cuộc Sống",
+      "title": "Gìn Giữ Hình Ảnh Người Thân Yêu",
       "description": "Biến những bức ảnh và bản ghi âm giọng nói quý giá thành các avatar AI tương tác. Chỉ với một bức ảnh và một mẫu giọng nói ngắn, bạn có thể tạo ra những ký ức biết nói sống động như thật, có thể kể chuyện, chia sẻ kinh nghiệm sống hoặc mang lại sự an ủi—gìn giữ trọn vẹn hình ảnh của người thân yêu mãi mãi.",
       "features": {
         "voiceSynthesis": "Công nghệ tổng hợp giọng nói bằng mạng thần kinh sâu",
